crates/cairn-tui/src/snapshots/cairn_tui__scenarios__snapshot_tests__loading-error__40x12.snap
---
source: crates/cairn-tui/src/scenarios.rs
expression: frame
---
┌ / ───────────────┐┌ / ───────────────┐
│Loading…          ││error: permission │
│                  ││                  │
│                  ││                  │
│                  ││                  │
│                  ││                  │
│                  ││                  │
│                  ││                  │
│                  ││                  │
└────── sort: name ┘└────── sort: name ┘
 …   q quit · Tab · ↵ open · v view
     ^S size · F7 mkdir · / filter
